--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -75,7 +75,10 @@ h3 {
   padding: 10px; }
 
 p {
+  font-family: arial;
   color: #444;
+  font-size: 16px;
+  line-height: 22px;
   margin: 10px 0; }
 
 .block {
@@ -181,6 +184,8 @@ body {
       margin: auto; }
   body.page-node-73 #a3 {
     margin-top: 50px; }
+  body.page-node-77 #a1, body.page-node-77 #a2, body.page-node-77 #a3, body.page-node-77 #a4 {
+    padding: 0 10px; }
   body.page-node-77 #a2 {
     background: #eee; }
   body.page-node-77 #a3 {
@@ -297,6 +302,7 @@ body {
             float: left;
             width: auto;
             height: 16px; }
+          #header-wrapper .container #header-row #header-utility #header-utility-search-wrapper .search-block-form .form-item-search-block-form input,
           #header-wrapper .container #header-row #header-utility #header-utility-search-wrapper .search-block-form--2 .form-item-search-block-form input {
             display: inline-block;
             height: 16px !important;
@@ -928,7 +934,7 @@ body .field-collection-container {
         top: calc(50% - 4px);
         right: 5px;
         color: #00703c;
-        top: 54px; }
+        top: 24px; }
       .block.block--bean .bean-subsections > .content .field--name-field-promo-read-more .field__item a {
         font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
         font-weight: 400;
@@ -940,15 +946,14 @@ body .field-collection-container {
         display: block;
         float: right;
         text-decoration: none;
-        top: 50px;
-        position: absolute;
-        right: 20px; }
+        position: relative;
+        top: 20px; }
         .block.block--bean .bean-subsections > .content .field--name-field-promo-read-more .field__item a:hover {
           text-decoration: underline; }
   .block.block--bean .bean-text-and-links-promo {
     border-top: 5px solid #bea848;
     background: #eee;
-    margin-top: 20px; }
+    margin: 20px 0; }
     .block.block--bean .bean-text-and-links-promo .content h2 {
       font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
       font-weight: 400;
@@ -1016,16 +1021,21 @@ body .field-collection-container {
           text-decoration: none;
           padding: 2px 10px 2px 25px;
           color: #00703c; }
-          .block.block--bean .bean-text-and-links-promo .list-links .field--name-field-list-of-links .field__item a:before {
-            content: '\f054';
-            font-family: FontAwesome;
-            font-size: 8px;
-            padding-left: 10px;
-            position: absolute;
-            color: black;
-            left: 0; }
       .block.block--bean .bean-text-and-links-promo .list-links.open .field--name-field-list-of-links {
         display: block; }
+
+.l-promo-sidebar .block.block--bean .bean-text-and-links-promo .list-links h2.block__title {
+  display: none; }
+.l-promo-sidebar .block.block--bean .bean-text-and-links-promo .list-links .field--name-field-list-of-links {
+  display: block; }
+  .l-promo-sidebar .block.block--bean .bean-text-and-links-promo .list-links .field--name-field-list-of-links .field__item a:before {
+    content: '\f054';
+    font-family: FontAwesome;
+    font-size: 8px;
+    padding-left: 10px;
+    position: absolute;
+    color: black;
+    left: 0; }
 
 /* end default bean styling */
 /* specific views blocks */
@@ -1748,7 +1758,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     display: none; }
 #block-views-media-block-3 .block__content .more-link {
   max-width: 1200px;
-  margin: 0;
+  margin: 0 auto;
   float: none; }
 
 /* images */
@@ -1764,7 +1774,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     font-size: 36px;
     line-height: 36px;
     text-align: center;
-    width: 250px;
+    width: 260px;
     margin: auto;
     background: #eee;
     top: 30px;
@@ -1772,6 +1782,8 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
   #block-views-media-block-1 .block__content {
     border-top: 5px solid #444;
     padding-top: 60px; }
+    #block-views-media-block-1 .block__content p {
+      margin: 0px 20px 30px 20px; }
     #block-views-media-block-1 .block__content .view-content .views-row {
       display: block;
       float: left;
@@ -1872,8 +1884,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
       font-size: 36px;
       line-height: 36px;
       text-align: center;
-      width: auto;
-      width: 380px;
+      width: 400px;
       margin: auto;
       background: white;
       top: -30px;
@@ -1995,31 +2006,39 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
 
 /* end sights and sounds - specific elements */
 /* generic owl carousel styling */
+.owl-theme .owl-controls .owl-pagination {
+  display: none; }
 .owl-theme .owl-controls .owl-buttons .owl-prev {
+  display: none;
   position: absolute;
   left: -10px;
   top: 30%;
   background: transparent;
+  opacity: 1;
+  display: block;
   left: 30px;
   top: 35%; }
   .owl-theme .owl-controls .owl-buttons .owl-prev:after {
-    content: '\f053';
+    content: url("/sites/all/themes/unc_charlotte4/img/owl-prev-green");
     font-family: FontAwesome;
-    color: #444;
+    color: #00703c;
     position: relative;
     font-size: 60px;
     font-size: 42px; }
 .owl-theme .owl-controls .owl-buttons .owl-next {
+  display: none;
   position: absolute;
   right: -10px;
   top: 30%;
   background: transparent;
+  opacity: 1;
+  display: block;
   right: 30px;
   top: 35%; }
   .owl-theme .owl-controls .owl-buttons .owl-next:after {
-    content: '\f054';
+    content: url("/sites/all/themes/unc_charlotte4/img/owl-next-green");
     font-family: FontAwesome;
-    color: #444;
+    color: #00703c;
     position: relative;
     font-size: 60px;
     font-size: 42px; }
@@ -2443,6 +2462,11 @@ html body div.jp-audio {
   padding: 5px; }
 
 /* end styling for specific node pages */
+/* 404 and 403 errors */
+body.page-node-119 .l-main,
+body.page-node-120 .l-main {
+  min-height: 400px; }
+
 /* search results page */
 body.page-search .l-main ul.breadcrumbs {
   display: none; }
@@ -2573,7 +2597,7 @@ body.page-search .l-main section.search-results {
     background: url("../img/footer-bg.png") repeat-x scroll left top transparent;
     clear: both;
     height: 110px;
-    height: 200px;
+    height: 150px;
     position: relative; }
     .l-footer #footer #footer-container #static-footer #utility-bar {
       max-width: 1200px;
@@ -2645,7 +2669,7 @@ body.page-search .l-main section.search-results {
       .l-footer #footer #footer-container #static-footer #footer-bottom #footer-name {
         display: block;
         float: left;
-        margin-top: 10px; }
+        margin-top: 15px; }
         .l-footer #footer #footer-container #static-footer #footer-bottom #footer-name p {
           color: #666666;
           font-family: arial,helvetica,sans-serif;
@@ -2655,7 +2679,8 @@ body.page-search .l-main section.search-results {
           font-size: 12px;
           line-height: 14px; }
         .l-footer #footer #footer-container #static-footer #footer-bottom #footer-name a {
-          text-decoration: none; }
+          text-decoration: none;
+          color: #00703c; }
           .l-footer #footer #footer-container #static-footer #footer-bottom #footer-name a:hover {
             text-decoration: underline; }
       .l-footer #footer #footer-container #static-footer #footer-bottom #footer-follow {
@@ -2703,8 +2728,15 @@ body.page-search .l-main section.search-results {
   margin: 0.2in; }
 
 @media print {
-  html body .l-page .l-header .l-header-third {
-    clear: both !important; }
+  html body .l-page #mobile-navbar {
+    display: none !important; }
+  html body .l-page .l-header-third .container .l-region--header-third #block-menu-block-1 {
+    display: block; }
+    html body .l-page .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul {
+      overflow: visible;
+      margin-bottom: 200px; }
+      html body .l-page .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li {
+        width: auto; }
 
   .print-buttons,
   .tabs--primary {
