--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -2241,7 +2241,7 @@ html #block-views-basic-page-featured-block{
 				}
 				&:after{
 					//content:'\f053';
-					content: url('/sites/all/themes/unc_charlotte4/img/owl-prev-green');
+					content: url('/sites/all/themes/unc_charlotte4/img/owl-prev-green.png');
 					font-family:FontAwesome;
 					color:#00703c;
 					position:relative;
@@ -2265,7 +2265,7 @@ html #block-views-basic-page-featured-block{
 				}
 				&:after{
 					//content:'\f054';
-					content: url('/sites/all/themes/unc_charlotte4/img/owl-next-green');
+					content: url('/sites/all/themes/unc_charlotte4/img/owl-next-green.png');
 					font-family:FontAwesome;
 					color:#00703c;
 					position:relative;
